# game-template

./: .gitignore  Application.cpp  CMakeLists.txt  conanfile.py  game_world.cpp  game_world.hpp  imgui.ini  main_scene.cpp  main_scene.hpp
assets/data/camera/: camera_data.hpp  editor_controls.hpp
assets/data/modules/core/: core_module.hpp
assets/flecs_scripting/: box.flecs  buildings.flecs
assets/modules/action_components/: requirements.cpp  requirements.hpp
assets/modules/blaze_draco_editor/: text_editor.cpp  text_editor.hpp
assets/modules/serialization/: serializer.cpp  serializer.hpp
assets/scripts/experimental/data_management/: schema_manager.cpp  schema_manager.hpp
assets/scripts/experimental/data_management/parsing/: schema_parser.cpp  schema_parser.hpp
assets/scripts/experimental/data_management/schemas/: schema.cpp  schema.hpp
assets/scripts/gui/: ui_hierarchy.cpp  ui_hierarchy.hpp  ui_properties_panel.cpp  ui_properties_panel.hpp
assets/scripts/physics/: rigidbody.cpp  rigidbody.hpp
experimental-shaders/: test.frag  test.frag.spv  test.vert  test.vert.spv  test_vert.spv
